--- a/workscout-child/src/scss/style.scss
+++ b/workscout-child/src/scss/style.scss
@@ -23,5 +23,8 @@ Template:  workscout
 // main styles
 @import 'modules/header';
 @import 'modules/banner';
+@import 'modules/latest-news';
+@import 'modules/login-form';
 @import 'modules/job-listing';
+@import 'modules/pricing';
 @import 'modules/footer';
