--- a/workscout-child/src/scss/global/_mixins.scss
+++ b/workscout-child/src/scss/global/_mixins.scss
@@ -13,6 +13,18 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+@mixin fa-icon() {
+	display: inline-block;
+	font-family: "Font Awesome 5 Free";
+	font-weight: 900;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
+	display: inline-block;
+	font-style: normal;
+	font-variant: normal;
+	text-rendering: auto;
+	line-height: 1;
+}
 
 @mixin hardware-accelerate() {
 	-webkit-transform : translateX(0);
